added new images. made parallax's smaller

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <!-- Compiled and minified CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
-  <title>Twice</title>
+  <title>트와이스</title>
   <style>
     header{
       background: url(img/backgroundPlain.jpg);
@@ -23,7 +23,7 @@
       }
     }
     .parallax-container {
-      height: 650px;
+      height: 550px;
     }
     .section{
       padding-top: 4vw;
@@ -112,13 +112,13 @@
           <img src="img/img5.jpg" alt="" class="responsive-img materialboxed">
       </div>
       <div class="col s12 l6 offset-l1 pull-l5 right-align">
-        <h2 class="pink-text text-lighten-3">Jeongyeon 정연</h2>
-        <p>birth name: Yoo Kyung-wan 유경완</p>
-        <p>birthplace: Suwon, South Korea</p>
-        <p>birthday: November 1, 1996</p>
-        <p>position: lead vocalist</p>
-        <p>star sign: scorpio</p>
-        <p>blood type: O</p>
+        <h2 class="pink-text text-lighten-3"></h2>
+        <p>birth name: </p>
+        <p>birthplace: </p>
+        <p>birthday: </p>
+        <p>position: </p>
+        <p>star sign: </p>
+        <p>blood type: </p>
       </div>
     </div>
     <div class="row">
@@ -126,13 +126,13 @@
           <img src="img/img6.jpg" alt="" class="responsive-img materialboxed">
       </div>
       <div class="col s12 l6 offset-l1">
-        <h2 class="pink-text text-lighten-3">Nature</h2>
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
+        <h2 class="pink-text text-lighten-3"></h2>
+        <p>birth name: </p>
+        <p>birthplace: </p>
+        <p>birthday: </p>
+        <p>position: </p>
+        <p>star sign: </p>
+        <p>blood type: </p>
       </div>
     </div>
   </section>
@@ -181,29 +181,44 @@
   <section class="container section" id="stuff">
     <div class="row">
       <div class="col s12 l4">
-          <img src="img/img4.jpg" alt="" class="responsive-img materialboxed">
+          <img src="img/img1.jpg" alt="" class="responsive-img materialboxed">
       </div>
       <div class="col s12 l6 offset-l1">
-        <h2 class="pink-text text-lighten-3">Stuff</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at lacus congue, suscipit elit nec, tincidunt orci.</p>
+        <h2 class="pink-text text-lighten-3">Jeongyeon 정연</h2>
+        <p>birth name: Yoo Kyung-wan 유경완</p>
+        <p>birthplace: Suwon, South Korea</p>
+        <p>birthday: November 1, 1996</p>
+        <p>position: lead vocalist</p>
+        <p>star sign: scorpio</p>
+        <p>blood type: O</p>
       </div>
     </div>
     <div class="row">
       <div class="col s12 l4 offset-l1 push-l7">
-          <img src="img/img5.jpg" alt="" class="responsive-img materialboxed">
+          <img src="img/img2.jpg" alt="" class="responsive-img materialboxed">
       </div>
       <div class="col s12 l6 offset-l1 pull-l5 right-align">
-        <h2 class="pink-text text-lighten-3">Cityscapes</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at lacus congue, suscipit elit nec, tincidunt orci.</p>
+        <h2 class="pink-text text-lighten-3"></h2>
+        <p>birth name: </p>
+        <p>birthplace: </p>
+        <p>birthday: </p>
+        <p>position: </p>
+        <p>star sign: </p>
+        <p>blood type: </p>
       </div>
     </div>
     <div class="row">
       <div class="col s12 l4">
-          <img src="img/img6.jpg" alt="" class="responsive-img materialboxed">
+          <img src="img/img3.jpg" alt="" class="responsive-img materialboxed">
       </div>
       <div class="col s12 l6 offset-l1">
-        <h2 class="pink-text text-lighten-3">Nature</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at lacus congue, suscipit elit nec, tincidunt orci.</p>
+        <h2 class="pink-text text-lighten-3"></h2>
+        <p>birth name: </p>
+        <p>birthplace: </p>
+        <p>birthday: </p>
+        <p>position: </p>
+        <p>star sign: </p>
+        <p>blood type: </p>
       </div>
     </div>
   </section>
@@ -211,7 +226,7 @@
   <!-- parallax -->
   <div class="parallax-container">
     <div class="parallax">
-        <img src="img/parallax5.jpg" alt="twice-parallax" class="responsive-img">
+        <img src="img/parallax1.jpg" alt="twice-parallax" class="responsive-img">
     </div>
   </div>
 
@@ -244,7 +259,7 @@
   <!-- parallax -->
   <div class="parallax-container">
     <div class="parallax">
-        <img src="img/parallax5.jpg" alt="twice-parallax" class="responsive-img">
+        <img src="img/parallax2.jpg" alt="twice-parallax" class="responsive-img">
     </div>
   </div>
 
@@ -252,29 +267,44 @@
   <section class="container section" id="stuff">
     <div class="row">
       <div class="col s12 l4">
-          <img src="img/img4.jpg" alt="" class="responsive-img materialboxed">
+          <img src="img/img7.jpg" alt="" class="responsive-img materialboxed">
       </div>
       <div class="col s12 l6 offset-l1">
-        <h2 class="pink-text text-lighten-3">Stuff</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at lacus congue, suscipit elit nec, tincidunt orci.</p>
+        <h2 class="pink-text text-lighten-3"></h2>
+        <p>birth name: </p>
+        <p>birthplace: </p>
+        <p>birthday: </p>
+        <p>position: </p>
+        <p>star sign: </p>
+        <p>blood type: </p>
       </div>
     </div>
     <div class="row">
       <div class="col s12 l4 offset-l1 push-l7">
-          <img src="img/img5.jpg" alt="" class="responsive-img materialboxed">
+          <img src="img/img8.jpg" alt="" class="responsive-img materialboxed">
       </div>
       <div class="col s12 l6 offset-l1 pull-l5 right-align">
-        <h2 class="pink-text text-lighten-3">Cityscapes</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at lacus congue, suscipit elit nec, tincidunt orci.</p>
+        <h2 class="pink-text text-lighten-3"></h2>
+        <p>birth name: </p>
+        <p>birthplace: </p>
+        <p>birthday: </p>
+        <p>position: </p>
+        <p>star sign: </p>
+        <p>blood type: </p>
       </div>
     </div>
     <div class="row">
       <div class="col s12 l4">
-          <img src="img/img6.jpg" alt="" class="responsive-img materialboxed">
+          <img src="img/img9.jpg" alt="" class="responsive-img materialboxed">
       </div>
       <div class="col s12 l6 offset-l1">
-        <h2 class="pink-text text-lighten-3">Nature</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at lacus congue, suscipit elit nec, tincidunt orci.</p>
+        <h2 class="pink-text text-lighten-3"></h2>
+        <p>birth name: </p>
+        <p>birthplace: </p>
+        <p>birthday: </p>
+        <p>position: </p>
+        <p>star sign: </p>
+        <p>blood type: </p>
       </div>
     </div>
   </section>
@@ -284,14 +314,13 @@
     <div class="container">
       <div class="row">
         <div class="col l6 s12">
-          <h5>About Me</h5>
+          <h5>Twice</h5>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at lacus congue.</p>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at lacus congue, suscipit elit nec, tincidunt orci.</p>
         </div>
         <div class="col l4 offset-l2 s12">
           <h5 class="white-text">Connect</h5>
           <ul>
-            <li><a class="grey-text text-lighten-3" href="#">Facebook</a></li>
             <li><a class="grey-text text-lighten-3" href="#">Twitter</a></li>
             <li><a class="grey-text text-lighten-3" href="#">Linked In</a></li>
             <li><a class="grey-text text-lighten-3" href="#">Instagram</a></li>
@@ -300,7 +329,7 @@
       </div>
     </div>
     <div class="footer-copyright grey darken-4">
-      <div class="container center-align">&copy; 2020 TWICE-ONCE</div>
+      <div class="container center-align">&copy; 2020 ONCE</div>
     </div>
   </footer>
 
