added embedded videos to video tab2. changed text in footer

--- a/index.html
+++ b/index.html
@@ -234,23 +234,22 @@
   <section class="container section scrollspy" id="more">
     <div class="row">
         <div class="col s12 l4">
-            <h2 class="deep-purple-text">More & More</h2>
-            <p>More & More is the ninth Korean EP by the South Korean girl group Twice. It was released by JYP Entertainment and Republic Records on June 1, 2020, and features the lead single of the same name.</p>
+            <h2 class="deep-purple-text">Twice TV</h2>
         </div>
         <div class="col s12 l6 offset-l2">
             <ul class="tabs">
                 <li class="tab col s6">
-                    <a href="#video1" class="deep-purple-text text-lighten-1">More&More M/V</a>
+                    <a href="#ep1" class="deep-purple-text text-lighten-1">EP 1</a>
                 </li>
                 <li class="tab col s6">
-                    <a href="#video2" class="deep-purple-text text-lighten-1">More&More Live</a>
+                    <a href="#ep2" class="deep-purple-text text-lighten-1">EP 2</a>
                 </li>
             </ul>
-            <div class="col s12" id="video1">
-              tab2
+            <div class="col s12" id="ep1">
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/Q7Z5Sin1aIA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
-            <div class="col s12" id="video2">
-              tab1
+            <div class="col s12" id="ep2">
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/yiqaarvm1Vc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </div>
     </div>
@@ -314,9 +313,8 @@
     <div class="container">
       <div class="row">
         <div class="col l6 s12">
-          <h5>Twice</h5>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at lacus congue.</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at lacus congue, suscipit elit nec, tincidunt orci.</p>
+          <h5>트와이스</h5>
+          <p>TWICE is a South Korean girl group formed by JYP Entertainment. The group is composed of nine members: Nayeon, Jeongyeon, Momo, Sana, Jihyo, Mina, Dahyun, Chaeyoung, and Tzuyu. Twice was formed with the 2015 television program Sixteen, a reality show designed to select the members of Twice.</p>
         </div>
         <div class="col l4 offset-l2 s12">
           <h5 class="white-text">Connect</h5>
