add link to autoscroll and set up id

--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
         </a>
         <ul class="right hide-on-med-and-down">
           <li><a href="#more" class="black-text">More&More</a></li>
+          <li><a href="#ttv" class="black-text">Twice TV</a></li>
           <li><a href="#" class="tooltipped btn-floating btn-small pink lighten-4" data-position="bottom" data-tooltip="Instagram"> 
             <i class="fab fa-instagram"></i>
           </a></li>
@@ -86,6 +87,7 @@
         </ul>
         <ul class="sidenav grey lighten-2" id="mobile-menu">
           <li><a href="#more" class="black-text">More&More</a></li>
+          <li><a href="#ttv" class="black-text">Twice TV</a></li>
         </ul>
       </div>
     </nav>
@@ -231,7 +233,7 @@
   </div>
 
   <!-- song tab -->
-  <section class="container section scrollspy" id="more">
+  <section class="container section scrollspy" id="ttv">
     <div class="row">
         <div class="col s12 l4">
             <h2 class="deep-purple-text">Twice TV</h2>
