added all members

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <p>birthplace: Seoul, South Korea</p>
         <p>birthday: April 23, 1999</p>
         <p>positions: main rapper, vocalist</p>
-        <p>star sign: taurus</p>
+        <p>star sign: Taurus</p>
         <p>blood type: B</p>
       </div>
     </div>
@@ -114,13 +114,13 @@
           <img src="img/img5.jpg" alt="" class="responsive-img materialboxed">
       </div>
       <div class="col s12 l6 offset-l1 pull-l5 right-align">
-        <h2 class="pink-text text-lighten-3"></h2>
-        <p>birth name: </p>
-        <p>birthplace: </p>
-        <p>birthday: </p>
-        <p>position: </p>
-        <p>star sign: </p>
-        <p>blood type: </p>
+        <h2 class="pink-text text-lighten-3">Mina 미나</h2>
+        <p>birth name: Myoui Mina 名井 南</p>
+        <p>birthplace: San Antonio, United States</p>
+        <p>birthday: March 24, 1997</p>
+        <p>position: main dancer, vocalist</p>
+        <p>star sign: Aries</p>
+        <p>blood type: A</p>
       </div>
     </div>
     <div class="row">
@@ -128,17 +128,17 @@
           <img src="img/img6.jpg" alt="" class="responsive-img materialboxed">
       </div>
       <div class="col s12 l6 offset-l1">
-        <h2 class="pink-text text-lighten-3"></h2>
-        <p>birth name: </p>
-        <p>birthplace: </p>
-        <p>birthday: </p>
-        <p>position: </p>
-        <p>star sign: </p>
-        <p>blood type: </p>
+        <h2 class="pink-text text-lighten-3">Jihyo 지효</h2>
+        <p>birth name: Park Jisoo</p>
+        <p>birthplace: Guri, South Korea</p>
+        <p>birthday: February 1, 1997</p>
+        <p>position: leader, main vocalist</p>
+        <p>star sign: Aquarius</p>
+        <p>blood type: O</p>
       </div>
     </div>
   </section>
-
+  
   <!-- parallax -->
   <div class="parallax-container">
       <div class="parallax">
@@ -186,13 +186,13 @@
           <img src="img/img1.jpg" alt="" class="responsive-img materialboxed">
       </div>
       <div class="col s12 l6 offset-l1">
-        <h2 class="pink-text text-lighten-3">Jeongyeon 정연</h2>
-        <p>birth name: Yoo Kyung-wan 유경완</p>
-        <p>birthplace: Suwon, South Korea</p>
-        <p>birthday: November 1, 1996</p>
-        <p>position: lead vocalist</p>
-        <p>star sign: scorpio</p>
-        <p>blood type: O</p>
+        <h2 class="pink-text text-lighten-3">Momo 모모</h2>
+        <p>birth name: Hirai Momo 平井 もも</p>
+        <p>birthplace: Kyoto, Japan</p>
+        <p>birthday: November 9, 1996</p>
+        <p>position: lead dancer, vocalist, rapper</p>
+        <p>star sign: Scorpio</p>
+        <p>blood type: A</p>
       </div>
     </div>
     <div class="row">
@@ -200,13 +200,13 @@
           <img src="img/img2.jpg" alt="" class="responsive-img materialboxed">
       </div>
       <div class="col s12 l6 offset-l1 pull-l5 right-align">
-        <h2 class="pink-text text-lighten-3"></h2>
-        <p>birth name: </p>
-        <p>birthplace: </p>
-        <p>birthday: </p>
-        <p>position: </p>
-        <p>star sign: </p>
-        <p>blood type: </p>
+        <h2 class="pink-text text-lighten-3">Nayeon 나연</h2>
+        <p>birth name: Im Na Yeon 임나연</p>
+        <p>birthplace: Seoul, South Korea</p>
+        <p>birthday: September 22, 1995</p>
+        <p>position: center, lead vocalist, lead dancer</p>
+        <p>star sign: Virgo</p>
+        <p>blood type: A</p>
       </div>
     </div>
     <div class="row">
@@ -214,13 +214,13 @@
           <img src="img/img3.jpg" alt="" class="responsive-img materialboxed">
       </div>
       <div class="col s12 l6 offset-l1">
-        <h2 class="pink-text text-lighten-3"></h2>
-        <p>birth name: </p>
-        <p>birthplace: </p>
-        <p>birthday: </p>
-        <p>position: </p>
-        <p>star sign: </p>
-        <p>blood type: </p>
+        <h2 class="pink-text text-lighten-3">Dahyun 다현</h2>
+        <p>birth name: Kim Da Hyun 김다현</p>
+        <p>birthplace: Gyeonggi-do, South Korea</p>
+        <p>birthday: May 28, 1998</p>
+        <p>position: lead rapper, vocalist</p>
+        <p>star sign: Gemini</p>
+        <p>blood type: O</p>
       </div>
     </div>
   </section>
@@ -271,13 +271,13 @@
           <img src="img/img7.jpg" alt="" class="responsive-img materialboxed">
       </div>
       <div class="col s12 l6 offset-l1">
-        <h2 class="pink-text text-lighten-3"></h2>
-        <p>birth name: </p>
-        <p>birthplace: </p>
-        <p>birthday: </p>
-        <p>position: </p>
-        <p>star sign: </p>
-        <p>blood type: </p>
+        <h2 class="pink-text text-lighten-3">Tzuyu 쯔위</h2>
+        <p>birth name: Chou Tzuyu 周子瑜</p>
+        <p>birthplace: Tainan, Taiwan</p>
+        <p>birthday: June 14, 1999</p>
+        <p>position: maknae, visual, lead dancer, vocalist</p>
+        <p>star sign: Gemini</p>
+        <p>blood type: A</p>
       </div>
     </div>
     <div class="row">
@@ -285,13 +285,13 @@
           <img src="img/img8.jpg" alt="" class="responsive-img materialboxed">
       </div>
       <div class="col s12 l6 offset-l1 pull-l5 right-align">
-        <h2 class="pink-text text-lighten-3"></h2>
-        <p>birth name: </p>
-        <p>birthplace: </p>
-        <p>birthday: </p>
-        <p>position: </p>
-        <p>star sign: </p>
-        <p>blood type: </p>
+        <h2 class="pink-text text-lighten-3">Jeongyeon 정연</h2>
+        <p>birth name: Yoo Kyung-wan 유경완</p>
+        <p>birthplace: Suwon, South Korea</p>
+        <p>birthday: November 1, 1996</p>
+        <p>position: lead vocalist</p>
+        <p>star sign: scorpio</p>
+        <p>blood type: O</p>
       </div>
     </div>
     <div class="row">
@@ -299,13 +299,13 @@
           <img src="img/img9.jpg" alt="" class="responsive-img materialboxed">
       </div>
       <div class="col s12 l6 offset-l1">
-        <h2 class="pink-text text-lighten-3"></h2>
-        <p>birth name: </p>
-        <p>birthplace: </p>
-        <p>birthday: </p>
-        <p>position: </p>
-        <p>star sign: </p>
-        <p>blood type: </p>
+        <h2 class="pink-text text-lighten-3">Sana 사나</h2>
+        <p>birth name: Minatozaki Sana 湊崎 紗夏</p>
+        <p>birthplace: Osaka, Japan</p>
+        <p>birthday: December 29, 1996</p>
+        <p>position: lead dancer, vocalist</p>
+        <p>star sign: Capricorn</p>
+        <p>blood type: B</p>
       </div>
     </div>
   </section>
