added info to the footer and linked Youtube

--- a/index.html
+++ b/index.html
@@ -78,11 +78,14 @@
         <ul class="right hide-on-med-and-down">
           <li><a href="#more" class="black-text">More&More</a></li>
           <li><a href="#ttv" class="black-text">Twice TV</a></li>
-          <li><a href="#" class="tooltipped btn-floating btn-small pink lighten-4" data-position="bottom" data-tooltip="Instagram"> 
+          <li><a href="https://www.instagram.com/twicetagram/" class="tooltipped btn-floating btn-small pink lighten-4" data-position="bottom" data-tooltip="Instagram" target="_blank"> 
             <i class="fab fa-instagram"></i>
           </a></li>
-          <li><a href="#" class="tooltipped btn-floating btn-small pink lighten-4" data-position="bottom" data-tooltip="Twitter">
+          <li><a href="https://twitter.com/JYPETWICE?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" class="tooltipped btn-floating btn-small pink lighten-4" data-position="bottom" data-tooltip="Twitter" target="_blank">
             <i class="fab fa-twitter"></i>
+          </a></li>
+          <li><a href="https://www.youtube.com/channel/UCzgxx_DM2Dcb9Y1spb9mUJA" class="tooltipped btn-floating btn-small pink lighten-4" data-position="bottom" data-tooltip="Youtube" target="_blank">
+            <i class="fab fa-youtube"></i>
           </a></li>
         </ul>
         <ul class="sidenav grey lighten-2" id="mobile-menu">
@@ -316,20 +319,21 @@
       <div class="row">
         <div class="col l6 s12">
           <h5>트와이스</h5>
+          <p>Unofficial Fansite</p>
           <p>TWICE is a South Korean girl group formed by JYP Entertainment. The group is composed of nine members: Nayeon, Jeongyeon, Momo, Sana, Jihyo, Mina, Dahyun, Chaeyoung, and Tzuyu. Twice was formed with the 2015 television program Sixteen, a reality show designed to select the members of Twice.</p>
         </div>
         <div class="col l4 offset-l2 s12">
-          <h5 class="white-text">Connect</h5>
+          <h5 class="white-text">Stay Connected</h5>
           <ul>
-            <li><a class="grey-text text-lighten-3" href="#">Twitter</a></li>
-            <li><a class="grey-text text-lighten-3" href="#">Linked In</a></li>
-            <li><a class="grey-text text-lighten-3" href="#">Instagram</a></li>
+            <li><a class="grey-text text-lighten-3" href="https://twitter.com/JYPETWICE?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" target="_blank">Twitter</a></li>
+            <li><a class="grey-text text-lighten-3" href="https://www.instagram.com/twicetagram/" target="_blank">Instagram</a></li>
+            <li><a class="grey-text text-lighten-3" href="https://www.youtube.com/channel/UCzgxx_DM2Dcb9Y1spb9mUJA" target="_blank">YouTube</a></li>
           </ul>
         </div>
       </div>
     </div>
     <div class="footer-copyright grey darken-4">
-      <div class="container center-align">&copy; 2020 ONCE</div>
+      <div class="container center-align">contact info: m23.cullen@gmail.com</div>
     </div>
   </footer>
 
