hid parallax on tablet and smaller size screens

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
   </section>
   
   <!-- parallax -->
-  <div class="parallax-container hide-on-small-only">
+  <div class="parallax-container hide-on-med-and-down">
       <div class="parallax">
           <img src="img/parallax6.jpg" alt="twice-parallax" class="responsive-img">
       </div>
@@ -176,7 +176,7 @@
   </section>
 
   <!-- parallax -->
-  <div class="parallax-container hide-on-small-only">
+  <div class="parallax-container hide-on-med-and-down">
     <div class="parallax">
         <img src="img/parallax5.jpg" alt="twice-parallax" class="responsive-img">
     </div>
@@ -229,7 +229,7 @@
   </section>
 
   <!-- parallax -->
-  <div class="parallax-container hide-on-small-only">
+  <div class="parallax-container hide-on-med-and-down">
     <div class="parallax">
         <img src="img/parallax1.jpg" alt="twice-parallax" class="responsive-img">
     </div>
@@ -261,7 +261,7 @@
   </section>
 
   <!-- parallax -->
-  <div class="parallax-container hide-on-small-only">
+  <div class="parallax-container hide-on-med-and-down">
     <div class="parallax">
         <img src="img/parallax2.jpg" alt="twice-parallax" class="responsive-img">
     </div>
