lower cased to fix potential issue

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       <div class="container">
         <a href="#" class="brand-logo black-text">트와이스</a>
         <a href="#" class="sidenav-trigger" data-target="mobile-menu">
-          <i class="material-icons">Menu</i>
+          <i class="material-icons">menu</i>
         </a>
         <ul class="right hide-on-med-and-down">
           <li><a href="#more" class="black-text">More&More</a></li>
