changed tabs indicator color

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       padding-bottom: 4vw;
     }
     .tabs .indicator{
-      background-color: #673ab7;
+      background-color: white;
     }
     .tabs .tab a:focus, .tabs .tab a:focus.active {
       background: transparent;
