--- a/index.html
+++ b/index.html
@@ -63,6 +63,19 @@
     label.active {
       color: #66bb6a !important;
     }
+    .video-responsive {
+      overflow:hidden;
+      padding-bottom:56.25%;
+      position:relative;
+      height:0;
+    }
+    .video-responsive iframe {
+      left:0;
+      top:0;
+      height:100%;
+      width:100%;
+      position:absolute;
+    }
   </style>
 </head>
 <body>
@@ -159,10 +172,14 @@
         <div class="col s12 l6 offset-l2">
             <ul class="tabs">
                 <li class="tab col s6">
+                  <div class="video-responsive">
                     <a href="#video1" class="deep-purple-text text-lighten-1">More&More M/V</a>
+                  </div>
                 </li>
                 <li class="tab col s6">
+                  <div class="video-responsive">
                     <a href="#video2" class="deep-purple-text text-lighten-1">More&More Live</a>
+                   </div>
                 </li>
             </ul>
             <div class="col s12" id="video1">
@@ -244,10 +261,14 @@
         <div class="col s12 l6 offset-l2">
             <ul class="tabs">
                 <li class="tab col s6">
+                  <div class="video-responsive">
                     <a href="#ep1" class="deep-purple-text text-lighten-1">EP 1</a>
+                  </div>
                 </li>
                 <li class="tab col s6">
+                  <div class="video-responsive">
                     <a href="#ep2" class="deep-purple-text text-lighten-1">EP 2</a>
+                  </div>
                 </li>
             </ul>
             <div class="col s12" id="ep1">
