made embedded youtube videos responsive

--- a/index.html
+++ b/index.html
@@ -166,10 +166,14 @@
                 </li>
             </ul>
             <div class="col s12" id="video1">
-              <iframe width="560" height="315" src="https://www.youtube.com/embed/mH0_XpSHkZo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              <div class="video-container">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/mH0_XpSHkZo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              </div>
             </div>
             <div class="col s12" id="video2">
-              <iframe width="560" height="315" src="https://www.youtube.com/embed/MHbm4TvQGwg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              <div class="video-container">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/MHbm4TvQGwg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              </div>
             </div>
         </div>
     </div>
@@ -251,10 +255,14 @@
                 </li>
             </ul>
             <div class="col s12" id="ep1">
-              <iframe width="560" height="315" src="https://www.youtube.com/embed/Q7Z5Sin1aIA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              <div class="video-container">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/Q7Z5Sin1aIA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              </div>
             </div>
             <div class="col s12" id="ep2">
-              <iframe width="560" height="315" src="https://www.youtube.com/embed/yiqaarvm1Vc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              <div class="video-container">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/yiqaarvm1Vc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              </div>
             </div>
         </div>
     </div>
