--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 <body>
 
   <!-- navbar -->
-  <header>
+  <header id="top">
     <nav class="nav-wrapper transparent">
       <div class="container">
         <a href="#" class="brand-logo black-text">트와이스</a>
@@ -97,7 +97,7 @@
   </header>
 
   <!-- 3 idols -->
-  <section class="container section" id="stuff">
+  <section class="container section">
     <div class="row">
       <div class="col s12 l4">
           <img src="img/img4.jpg" alt="" class="responsive-img materialboxed">
@@ -345,6 +345,15 @@
     </div>
   </footer>
 
+  <!-- Floating action button -->
+  <div class="fixed-action-btn">
+    <a href="#top" class="btn-floating btn-medium pink lighten-4">
+      <i class="large material-icons">publish</i>
+    </a>
+  </div>
+   
+
+
   <!-- Compiled and minified JavaScript -->
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
@@ -357,6 +366,7 @@
       $('.tabs').tabs();
       $('.tooltipped').tooltip();
       $('.scrollspy').scrollSpy(); 
+      $('.fixed-action-btn').floatingActionButton();
 
     });
   </script>
