--- a/index.html
+++ b/index.html
@@ -76,8 +76,7 @@
           <i class="material-icons black-text">dehaze</i>
         </a>
         <ul class="right hide-on-med-and-down">
-          <li><a href="#more" class="black-text">More&More</a></li>
-          <li><a href="#ttv" class="black-text">Twice TV</a></li>
+          <li><a href="#comeback" class="black-text">Comeback</a></li>
           <li><a href="https://www.instagram.com/twicetagram/" class="tooltipped btn-floating btn-small pink lighten-4" data-position="bottom" data-tooltip="Instagram" target="_blank"> 
             <i class="fab fa-instagram"></i>
           </a></li>
@@ -89,15 +88,14 @@
           </a></li>
         </ul>
         <ul class="sidenav grey lighten-2" id="mobile-menu">
-          <li><a href="#more" class="black-text">More&More</a></li>
-          <li><a href="#ttv" class="black-text">Twice TV</a></li>
+          <li><a href="#comeback" class="black-text">Comeback Content</a></li>
         </ul>
       </div>
     </nav>
   </header>
 
   <!-- 3 idols -->
-  <section class="container section">
+  <section class="container section idols">
     <div class="row">
       <div class="col s12 l4">
           <img src="img/img4.jpg" alt="" class="responsive-img materialboxed">
@@ -140,59 +138,11 @@
         <p>blood type: O</p>
       </div>
     </div>
-  </section>
-  
-  <!-- parallax -->
-  <div class="parallax-container hide-on-med-and-down">
-      <div class="parallax">
-          <img src="img/parallax6.jpg" alt="twice-parallax" class="responsive-img">
-      </div>
-  </div>
-
-  <!-- song tab -->
-  <section class="container section scrollspy" id="more">
     <div class="row">
-        <div class="col s12 l4">
-            <h2 class="deep-purple-text">More & More</h2>
-            <p>More & More is the ninth Korean EP by the South Korean girl group Twice. It was released by JYP Entertainment and Republic Records on June 1, 2020, and features the lead single of the same name.</p>
-        </div>
-        <div class="col s12 l6 offset-l2">
-            <ul class="tabs">
-                <li class="tab col s6">
-                    <a href="#video1" class="deep-purple-text text-lighten-1">More&More M/V</a>
-                </li>
-                <li class="tab col s6">
-                    <a href="#video2" class="deep-purple-text text-lighten-1">More&More Live</a>
-                </li>
-            </ul>
-            <div class="col s12" id="video1">
-              <div class="video-container">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/mH0_XpSHkZo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-              </div>
-            </div>
-            <div class="col s12" id="video2">
-              <div class="video-container">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/MHbm4TvQGwg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-              </div>
-            </div>
-        </div>
-    </div>
-  </section>
-
-  <!-- parallax -->
-  <div class="parallax-container hide-on-med-and-down">
-    <div class="parallax">
-        <img src="img/parallax5.jpg" alt="twice-parallax" class="responsive-img">
-    </div>
-  </div>
-
-  <!-- 3 idols  -->
-  <section class="container section" id="stuff">
-    <div class="row">
-      <div class="col s12 l4">
+      <div class="col s12 l4 offset-l1 push-l7">
           <img src="img/img1.jpg" alt="" class="responsive-img materialboxed">
       </div>
-      <div class="col s12 l6 offset-l1">
+      <div class="col s12 l6 offset-l1 pull-l5 right-align">
         <h2 class="pink-text text-lighten-3">Momo 모모</h2>
         <p>birth name: Hirai Momo 平井 もも</p>
         <p>birthplace: Kyoto, Japan</p>
@@ -203,10 +153,10 @@
       </div>
     </div>
     <div class="row">
-      <div class="col s12 l4 offset-l1 push-l7">
+      <div class="col s12 l4">
           <img src="img/img2.jpg" alt="" class="responsive-img materialboxed">
       </div>
-      <div class="col s12 l6 offset-l1 pull-l5 right-align">
+      <div class="col s12 l6 offset-l1">
         <h2 class="pink-text text-lighten-3">Nayeon 나연</h2>
         <p>birth name: Im Na Yeon 임나연</p>
         <p>birthplace: Seoul, South Korea</p>
@@ -217,10 +167,10 @@
       </div>
     </div>
     <div class="row">
-      <div class="col s12 l4">
+      <div class="col s12 l4 offset-l1 push-l7">
           <img src="img/img3.jpg" alt="" class="responsive-img materialboxed">
       </div>
-      <div class="col s12 l6 offset-l1">
+      <div class="col s12 l6 offset-l1 pull-l5 right-align">
         <h2 class="pink-text text-lighten-3">Dahyun 다현</h2>
         <p>birth name: Kim Da Hyun 김다현</p>
         <p>birthplace: Gyeonggi-do, South Korea</p>
@@ -230,53 +180,6 @@
         <p>blood type: O</p>
       </div>
     </div>
-  </section>
-
-  <!-- parallax -->
-  <div class="parallax-container hide-on-med-and-down">
-    <div class="parallax">
-        <img src="img/parallax1.jpg" alt="twice-parallax" class="responsive-img">
-    </div>
-  </div>
-
-  <!-- song tab -->
-  <section class="container section scrollspy" id="ttv">
-    <div class="row">
-        <div class="col s12 l4">
-            <h2 class="deep-purple-text">Twice TV</h2>
-        </div>
-        <div class="col s12 l6 offset-l2">
-            <ul class="tabs">
-                <li class="tab col s6">
-                    <a href="#ep1" class="deep-purple-text text-lighten-1">EP 1</a>
-                </li>
-                <li class="tab col s6">
-                    <a href="#ep2" class="deep-purple-text text-lighten-1">EP 2</a>
-                </li>
-            </ul>
-            <div class="col s12" id="ep1">
-              <div class="video-container">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/Q7Z5Sin1aIA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-              </div>
-            </div>
-            <div class="col s12" id="ep2">
-              <div class="video-container">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/yiqaarvm1Vc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-              </div>
-            </div>
-        </div>
-    </div>
-  </section>
-
-  <!-- parallax -->
-  <div class="parallax-container hide-on-med-and-down">
-    <div class="parallax">
-        <img src="img/parallax2.jpg" alt="twice-parallax" class="responsive-img">
-    </div>
-  </div>
-
-  <!-- 3 idols  -->
-  <section class="container section" id="stuff">
     <div class="row">
       <div class="col s12 l4">
           <img src="img/img7.jpg" alt="" class="responsive-img materialboxed">
@@ -318,6 +221,91 @@
         <p>star sign: Capricorn</p>
         <p>blood type: B</p>
       </div>
+    </div>
+  </section>
+
+  <!-- parallax -->
+  <div class="parallax-container hide-on-med-and-down">
+    <div class="parallax">
+        <img src="img/parallax1.jpg" alt="twice-parallax" class="responsive-img">
+    </div>
+  </div>
+  <div class="divider show-on-small"></div>
+
+  <!-- song tab -->
+  <section class="container section scrollspy" id="comeback">
+    <div class="row">
+        <div class="col s12 l4">
+            </br>
+            <h3>Recent Comeback</h3>
+            <p>More & More is the ninth Korean EP by the South Korean girl group Twice. It was released by JYP Entertainment and Republic Records on June 1, 2020, and features the lead single of the same name.</p>
+            <p>"Fanfare" is a Japanese song by South Korean girl group Twice. The song and music video were released by Warner Music Japan on June 18, 2020.</p>
+            <div class="carousel show-on-small">
+              <a class="carousel-item" href="#one!"><img src="img/11.jpg"></a>
+              <a class="carousel-item" href="#two!"><img src="img/22.jpg"></a>
+              <a class="carousel-item" href="#three!"><img src="img/33.jpg"></a>
+              <a class="carousel-item" href="#four!"><img src="img/44.jpg"></a>
+              <a class="carousel-item" href="#one!"><img src="img/55.jpg"></a>
+              <a class="carousel-item" href="#one!"><img src="img/66.jpg"></a>
+              <a class="carousel-item" href="#two!"><img src="img/77.jpg"></a>
+              <a class="carousel-item" href="#three!"><img src="img/88.jpg"></a>
+              <a class="carousel-item" href="#four!"><img src="img/99.jpg"></a>
+            </div>
+            </br>
+            </br>
+        </div>
+        <div class="col s12 l6 offset-l2">
+            <ul class="tabs">
+                <li class="tab col s3">
+                    <a href="#video1" class="deep-purple-text text-lighten-1">M/V's</a>
+                </li>
+                <li class="tab col s3">
+                    <a href="#video2" class="deep-purple-text text-lighten-1">Live</a>
+                </li>
+                <li class="tab col s3">
+                    <a href="#ep1" class="deep-purple-text text-lighten-1">TTV 1+2</a>
+                </li>
+                <li class="tab col s">
+                    <a href="#ep2" class="deep-purple-text text-lighten-1">TTV 3+4</a>
+                </li>
+            </ul>
+            <div class="col s12" id="video1">
+              <div class="video-container">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/mH0_XpSHkZo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              </div>
+              </br>
+              <div class="video-container">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/kRT174IdxuM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              </div>
+            </div>
+            <div class="col s12" id="video2">
+              <div class="video-container">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/MHbm4TvQGwg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              </div>
+              </br>
+              <div class="video-container">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/fWe0jcsd41Q" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              </div>
+            </div>
+            <div class="col s12" id="ep1">
+              <div class="video-container">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/QPlwqHVIHCY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              </div>
+              </br>
+              <div class="video-container">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/SALnnvMwyFk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              </div>
+            </div>
+            <div class="col s12" id="ep2">
+              <div class="video-container">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/1Ngk7JwvdHM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              </div>
+              </br>
+              <div class="video-container">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/xbbSr15ungs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              </div>
+            </div>
+        </div>
     </div>
   </section>
 
@@ -367,6 +355,7 @@
       $('.tooltipped').tooltip();
       $('.scrollspy').scrollSpy(); 
       $('.fixed-action-btn').floatingActionButton();
+      $('.carousel').carousel();
 
     });
   </script>
